<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.hitung.HitungLuas">

        <TextView
            android:id="@+id/rumus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rumus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lebar_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rumus">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/panjang_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/panjang"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tinggiSegitiga_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lebar_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lebar_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lebar"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hitung_luas"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="235dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetButton" />

        <TextView
            android:id="@+id/luasTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Luas Persegi Panjang: cm^2" />

        <TextView
            android:id="@+id/kategoriTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/luasTextView"
            tools:text="Kategori: Persegi Panjang Kecil" />


        <Button
            android:id="@+id/lihatGambar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Lihat Gambar Persegi Panjang"
            app:layout_constraintEnd_toEndOf="@+id/kategoriTextView"
            app:layout_constraintStart_toStartOf="@+id/kategoriTextView"
            app:layout_constraintTop_toBottomOf="@+id/kategoriTextView"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/linkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Rumus Persegi Panjang Lengkap"
            app:layout_constraintEnd_toEndOf="@+id/kategoriTextView"
            app:layout_constraintStart_toStartOf="@+id/kategoriTextView"
            app:layout_constraintTop_toBottomOf="@+id/lihatGambar"
            android:visibility="invisible"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>